# dataStructure

./: CMakeLists.txt  README.md
include/: image_gui.hpp  segmentation.hpp
src/: image_gui.cpp  main.cpp  main_gui.cpp
